Update README with new project url

--- a/README
+++ b/README
@@ -1,11 +1,7 @@
+trytond_party_iae
+=================
 
-This Module runs with the Tryton application platform.
-
-This module is developed and tested over a Tryton server and core modules
-patched with patches from `trytond-patches project`_ (take care with the
-branches). Maybe these patches are required for the module to work.
-
-.. _trytond-patches project: https://bitbucket.org/nantic/trytond-patches
+The party_iae module of the Tryton application platform.
 
 Installing
 ----------
@@ -16,11 +12,10 @@ Support
 -------
 
 If you encounter any problems with this module, please don't hesitate to ask
-questions on the NaN·tic bug tracker, mailing list,
-wiki or IRC channel:
+questions on the module bug tracker, mailing list, wiki or IRC channel:
 
 *  http://doc.tryton-erp.es/
-*  http://bitbucket.org/nantic/trytond-party_iae
+*  http://bitbucket.org/trytonspain/trytond-party_iae
 *  http://groups.tryton.org/
 *  http://wiki.tryton.org/
 *  irc://irc.freenode.net/tryton
