--- a/locale/ca.po
+++ b/locale/ca.po
@@ -8,11 +8,11 @@ msgstr "Filles"
 
 msgctxt "field:party.iae,create_date:"
 msgid "Create Date"
-msgstr "Data creació"
+msgstr "Data de creació"
 
 msgctxt "field:party.iae,create_uid:"
 msgid "Create User"
-msgstr "Usuari creació"
+msgstr "Usuari de creació"
 
 msgctxt "field:party.iae,division:"
 msgid "Division"
@@ -56,11 +56,11 @@ msgstr "Secció"
 
 msgctxt "field:party.iae,write_date:"
 msgid "Write Date"
-msgstr "Data modificació"
+msgstr "Data de modificació"
 
 msgctxt "field:party.iae,write_uid:"
 msgid "Write User"
-msgstr "Usuari modificació"
+msgstr "Usuari de modificació"
 
 msgctxt "field:party.party,main_iae:"
 msgid "Main IAE"
@@ -72,11 +72,11 @@ msgstr "IAEs secundàries"
 
 msgctxt "field:party.party-party.iae,create_date:"
 msgid "Create Date"
-msgstr "Data creació"
+msgstr "Data de creació"
 
 msgctxt "field:party.party-party.iae,create_uid:"
 msgid "Create User"
-msgstr "Usuari creació"
+msgstr "Usuari de creació"
 
 msgctxt "field:party.party-party.iae,iae:"
 msgid "IAE"
@@ -96,11 +96,11 @@ msgstr "Nom"
 
 msgctxt "field:party.party-party.iae,write_date:"
 msgid "Write Date"
-msgstr "Data modificació"
+msgstr "Data de modificació"
 
 msgctxt "field:party.party-party.iae,write_uid:"
 msgid "Write User"
-msgstr "Usuari modificació"
+msgstr "Usuari de modificació"
 
 msgctxt "model:ir.action,name:act_party_by_iae"
 msgid "Parties by IAE"
