--- a/locale/es.po
+++ b/locale/es.po
@@ -8,11 +8,11 @@ msgstr "Hijas"
 
 msgctxt "field:party.iae,create_date:"
 msgid "Create Date"
-msgstr "Fecha creación"
+msgstr "Fecha de creación"
 
 msgctxt "field:party.iae,create_uid:"
 msgid "Create User"
-msgstr "Usuario creación"
+msgstr "Usuario de creación"
 
 msgctxt "field:party.iae,division:"
 msgid "Division"
@@ -56,11 +56,11 @@ msgstr "Sección"
 
 msgctxt "field:party.iae,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:party.iae,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "field:party.party,main_iae:"
 msgid "Main IAE"
@@ -72,11 +72,11 @@ msgstr "IAEs secundarias"
 
 msgctxt "field:party.party-party.iae,create_date:"
 msgid "Create Date"
-msgstr "Fecha creación"
+msgstr "Fecha de creación"
 
 msgctxt "field:party.party-party.iae,create_uid:"
 msgid "Create User"
-msgstr "Usuario creación"
+msgstr "Usuario de creación"
 
 msgctxt "field:party.party-party.iae,iae:"
 msgid "IAE"
@@ -96,11 +96,11 @@ msgstr "Nombre"
 
 msgctxt "field:party.party-party.iae,write_date:"
 msgid "Write Date"
-msgstr "Fecha modificación"
+msgstr "Fecha de modificación"
 
 msgctxt "field:party.party-party.iae,write_uid:"
 msgid "Write User"
-msgstr "Usuario modificación"
+msgstr "Usuario de modificación"
 
 msgctxt "model:ir.action,name:act_party_by_iae"
 msgid "Parties by IAE"
